// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LatestSong Component > matches snapshot after 5 seconds 1`] = `
<DocumentFragment>
  <div
    class="overflow-hidden relative"
    data-testid="frame-container"
  >
    <div
      class="transition-transform duration-500"
      style="transform: translateY(-100%); height: 152px;"
    >
      <div
        style="pointer-events: none;"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media *; fullscreen; picture-in-picture"
          class="rounded-xl"
          data-testid="song-test-id-0"
          height="152"
          loading="lazy"
          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
          src="https://open.spotify.com/embed/album/6H73t0Wok8dsEEGqRhgOsV?utm_source=generator"
          style="pointer-events: auto; overflow: hidden; background: transparent;"
          width="365"
        />
      </div>
      <div
        style="pointer-events: none;"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media *; fullscreen; picture-in-picture"
          class="rounded-xl"
          data-testid="song-test-id-1"
          height="152"
          loading="lazy"
          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
          src="https://embed.music.apple.com/do/album/un-a%C3%B1o-single/1760344218"
          style="pointer-events: auto; overflow: hidden; background: transparent;"
          width="365"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LatestSong Component > matches snapshot after another 5 seconds 1`] = `
<DocumentFragment>
  <div
    class="overflow-hidden relative"
    data-testid="frame-container"
  >
    <div
      class="transition-transform duration-500"
      style="transform: translateY(-0%); height: 152px;"
    >
      <div
        style="pointer-events: none;"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media *; fullscreen; picture-in-picture"
          class="rounded-xl"
          data-testid="song-test-id-0"
          height="152"
          loading="lazy"
          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
          src="https://open.spotify.com/embed/album/6H73t0Wok8dsEEGqRhgOsV?utm_source=generator"
          style="pointer-events: auto; overflow: hidden; background: transparent;"
          width="365"
        />
      </div>
      <div
        style="pointer-events: none;"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media *; fullscreen; picture-in-picture"
          class="rounded-xl"
          data-testid="song-test-id-1"
          height="152"
          loading="lazy"
          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
          src="https://embed.music.apple.com/do/album/un-a%C3%B1o-single/1760344218"
          style="pointer-events: auto; overflow: hidden; background: transparent;"
          width="365"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LatestSong Component > matches snapshot at initial render 1`] = `
<DocumentFragment>
  <div
    class="overflow-hidden relative"
    data-testid="frame-container"
  >
    <div
      class="transition-transform duration-500"
      style="transform: translateY(-0%); height: 152px;"
    >
      <div
        style="pointer-events: none;"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media *; fullscreen; picture-in-picture"
          class="rounded-xl"
          data-testid="song-test-id-0"
          height="152"
          loading="lazy"
          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
          src="https://open.spotify.com/embed/album/6H73t0Wok8dsEEGqRhgOsV?utm_source=generator"
          style="pointer-events: auto; overflow: hidden; background: transparent;"
          width="365"
        />
      </div>
      <div
        style="pointer-events: none;"
      >
        <iframe
          allow="autoplay; clipboard-write; encrypted-media *; fullscreen; picture-in-picture"
          class="rounded-xl"
          data-testid="song-test-id-1"
          height="152"
          loading="lazy"
          sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
          src="https://embed.music.apple.com/do/album/un-a%C3%B1o-single/1760344218"
          style="pointer-events: auto; overflow: hidden; background: transparent;"
          width="365"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
